一个账号可以登录多个分店

--- a/HWYZ/Content/base.css
+++ b/HWYZ/Content/base.css
@@ -25,6 +25,10 @@ em { color: #ff6a00; font-style: normal; }
 
 .login-bg { background-position: top; }
 
+@media print {
+    .noprint { display: none; }
+}
+
 /*#container { margin: 25px 10px 0px 15px; }*/
 
 /*alert notice css*/
