--- a/HWYZ/Views/Couriers/Index.cshtml
+++ b/HWYZ/Views/Couriers/Index.cshtml
@@ -16,7 +16,7 @@
                             </div>
                         }
                     </div>
-                    @if (HWYZ.Context.UserContext.user.Store != null)
+                    @if (HWYZ.Context.UserContext.store != null)
                     {
                         <div class="col-md-7">
                             <button class="btn btn-info" type="button" style="float: right;" data-toggle="modal" data-target="#dlg_edit">添加</button>
