--- a/HWYZ/Views/OrderEdit/Add.cshtml
+++ b/HWYZ/Views/OrderEdit/Add.cshtml
@@ -41,7 +41,7 @@
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">折扣系数</span>
-                        <input type="text" name="Discount" readonly="readonly" class="form-control" value="@HWYZ.Context.UserContext.user.Store.Discount" />
+                        <input type="text" name="Discount" readonly="readonly" class="form-control" value="@HWYZ.Context.UserContext.store.Discount" />
                     </div>
                 </div>
                 <div class="form-group">
