--- a/HWYZ/Views/ProductDelive/Index.cshtml
+++ b/HWYZ/Views/ProductDelive/Index.cshtml
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="row" style="margin-top: 15px;">
-                        @if (UserContext.user.Store == null)
+                        @if (UserContext.store == null)
                         {
                             <div class="col-md-4">
                                 <div class="input-group">
