--- a/HWYZ/Views/StoreInfo/Index.cshtml
+++ b/HWYZ/Views/StoreInfo/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="jumbotron">
-    @{var store = HWYZ.Context.UserContext.user.Store;}
+    @{var store = HWYZ.Context.UserContext.store;}
     @if (store == null)
     {
         <h3>您没有所属门店</h3>
