--- a/HWYZ/Views/OrderView/Index.cshtml
+++ b/HWYZ/Views/OrderView/Index.cshtml
@@ -145,21 +145,17 @@
             </div>
         </div>
     </div>
-    @if (@ViewBag.order.Status == OrderStatus.BeforeSend && @UserContext.user.Store == null)
-    {
-        <div class="panel-footer row" style="text-align: right;">
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-                <button type="button" class="btn btn-default reject">驳回</button>
+    <div class="panel-footer noprint" style="text-align: right;">
+        @if (@ViewBag.order.Status == OrderStatus.BeforeSend && @UserContext.store == null)
+        {
+            <div class="input-group" style="float: right; width: 25%; margin-left: 10px;">
+                <span class="input-group-addon">驳回原因</span>
+                <input type="text" class="form-control" name="reason" />
             </div>
-            <div class="col-md-4">
-                <div class="input-group">
-                    <span class="input-group-addon">驳回原因</span>
-                    <input type="text" class="form-control" name="reason" />
-                </div>
-            </div>
-        </div>
-    }
+            <button type="button" class="btn btn-default reject" style="float: right; margin-left: 10px;">驳回</button>
+        }
+        <button type="button" class="btn btn-default" onclick="javascript:window.print();">打印</button>
+    </div>
 </div>
 <script type="text/javascript">
     $(function () {
