--- a/HWYZ/Views/ProductDelive/List.cshtml
+++ b/HWYZ/Views/ProductDelive/List.cshtml
@@ -8,7 +8,7 @@
         <thead>
             <tr>
                 <td>订单号</td>
-                @if (UserContext.user.Store == null)
+                @if (UserContext.store == null)
                 { 
                     <td>采购单位</td>
                 }
@@ -26,7 +26,7 @@
                 {
                 <tr>
                     <td>@item.OrderCode</td>
-                    @if (UserContext.user.Store == null)
+                    @if (UserContext.store == null)
                     { 
                         <td>@item.StoreName</td>
                     }
