--- a/HWYZ/Views/ProductSet/Add.cshtml
+++ b/HWYZ/Views/ProductSet/Add.cshtml
@@ -47,7 +47,7 @@
                         </select>
                     </div>
                 </div>
-                @if (String.IsNullOrEmpty(UserContext.user.StoreId))
+                @if (UserContext.store == null)
                 {
                     <div class="form-group">
                         <div class="input-group">
