--- a/HWYZ/Views/StoreGrant/Add.cshtml
+++ b/HWYZ/Views/StoreGrant/Add.cshtml
@@ -14,6 +14,12 @@
                         <input type="text" class="form-control" name="StoreName" />
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">登录账号</span>
+                        <input type="hidden" data-select="u" name="UserId" class="_select" style="width: 100%;" />
+                    </div>
+                </div>
                 <div class="form-group row">
                     <div class="col-md-4">
                         <div class="input-group">
