修改表格表头样式 增加两个报表

--- a/HWYZ/Content/base.css
+++ b/HWYZ/Content/base.css
@@ -29,6 +29,10 @@ em { color: #ff6a00; font-style: normal; }
     .noprint { display: none; }
 }
 
+#main-content table thead tr { background-color:#428BCA;}
+
+#main-content table thead tr td { color:white;}
+
 /*#container { margin: 25px 10px 0px 15px; }*/
 
 /*alert notice css*/
