--- a/HWYZ/Views/ReportOfSend/Index.cshtml
+++ b/HWYZ/Views/ReportOfSend/Index.cshtml
@@ -49,7 +49,7 @@
                 <li role="presentation" class="store"><a href="#store">按采购金额</a></li>
             </ul>
         </div>
-        <div class="row" id="container">
+        <div id="container">
         </div>
     </div>
 </div>
