--- a/HWYZ/Views/Shared/_OrderLayout.cshtml
+++ b/HWYZ/Views/Shared/_OrderLayout.cshtml
@@ -13,14 +13,15 @@
     <div class="noprint navbar navbar-duomi navbar-static-top" role="navigation" style="min-height: 100px;">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" style="height: 90px; padding-left: 100px;" href="#" id="logo">徽味驿站云平台<br />
+                <a class="navbar-brand" style="height: 90px; padding-left: 100px;" href="#" id="logo">
+                    徽味驿站云平台<br />
                     <br />
                     HUIWEI YIZHAN CLOUD PLATFORM
                 </a>
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div id="main-content" class="container-fluid">
         <section class="content-wrapper main-content clear-fix">
             @RenderBody()
         </section>
