修改登录页面以及banner样式

--- a/HWYZ/Views/Login/Index.cshtml
+++ b/HWYZ/Views/Login/Index.cshtml
@@ -2,11 +2,21 @@
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
     ViewBag.Title = "主页";
 }
-<h1>徽味驿站</h1>
+<table>
+    <tr>
+        <td>
+            <img src="~/Images/logo.png" alt="logo" width="200" />
+        </td>
+        <td style="width: 50px;"></td>
+        <td>
+            <h1>徽味驿站</h1>
 
-<form class="form" id="form_login" action="login/signin" method="post">
-    <input type="text" placeholder="用户编号" name="account">
-    <input type="password" placeholder="口令" name="pwd">
-    <button type="submit" id="login-button">登录</button>
-</form>
+            <form class="form" id="form_login" action="login/signin" method="post">
+                <input type="text" placeholder="用户编号" name="account">
+                <input type="password" placeholder="口令" name="pwd">
+                <button type="submit" id="login-button">登录</button>
+            </form>
+        </td>
+    </tr>
+</table>
 @Scripts.Render("~/Scripts/Page/login.js")
