--- a/HWYZ/Views/Shared/_Layout.cshtml
+++ b/HWYZ/Views/Shared/_Layout.cshtml
@@ -33,16 +33,15 @@
       TOP BAR CONTENT & NOTIFICATIONS
       *********************************************************************************************************************************************************** -->
         <!--header start-->
-        <header class="header black-bg">
+        <header class="header black-bg" style="background: #4E7DB5; border-bottom: 1px solid #153A6F;">
             <div class="sidebar-toggle-box">
-                <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+                <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color: #fff;"></div>
             </div>
             <!--logo start-->
-            <a href="/" class="logo"><b>徽味驿站云平台</b></a>
+            <a href="/" class="logo">
+                <img src="~/Images/logo.png" width="40" /><b>徽味驿站云平台</b></a>
             <!--logo end-->
-
             <div class="top-menu">
-
                 <ul class="nav pull-right top-menu">
                     <li><a class="logout" href="login/logoff">登出</a></li>
                 </ul>
