--- a/HWYZ/Content/styles.css
+++ b/HWYZ/Content/styles.css
@@ -5,7 +5,7 @@ body ::-webkit-input-placeholder { /* WebKit browsers */ font-family: 'Source Sa
 body :-moz-placeholder { /* Mozilla Firefox 4 to 18 */ font-family: 'Source Sans Pro', sans-serif; color: white; opacity: 1; font-weight: 300; }
 body ::-moz-placeholder { /* Mozilla Firefox 19+ */ font-family: 'Source Sans Pro', sans-serif; color: white; opacity: 1; font-weight: 300; }
 body :-ms-input-placeholder { /* Internet Explorer 10+ */ font-family: 'Source Sans Pro', sans-serif; color: white; font-weight: 300; }
-.wrapper { background: #50a3a2; background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%); background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%); opacity: 0.8; position: absolute; top: 50%; left: 0; width: 100%; height: 400px; margin-top: -200px; overflow: hidden; }
+.wrapper { background: #4E7DB5; background: -webkit-linear-gradient(top left, #153A6F 0%, #4E7DB5 100%); background: linear-gradient(to bottom right, #153A6F 0%, #4E7DB5 100%); opacity: 0.8; position: absolute; top: 50%; left: 0; width: 100%; height: 400px; margin-top: -200px; overflow: hidden; }
 
 .wrapper.form-success .container h1 { -webkit-transform: translateY(85px); -ms-transform: translateY(85px); transform: translateY(85px); }
 .container { max-width: 600px; margin: 0 auto; padding: 80px 0; height: 400px; text-align: center; }
