--- a/HWYZ/Views/Home/Index.cshtml
+++ b/HWYZ/Views/Home/Index.cshtml
@@ -59,18 +59,36 @@
     else
     {
         <div class="col-md-5 col-sm-5 col-md-offset-1 box0">
-            <div class="box1">
-                <span><a href="javascript:void(0)"><i class="fa fa-home"></i></a></span>
-                <h3>@ViewBag.storeNumber</h3>
+            <div class="panel  panel-default" style="text-align: center;">
+                <div class="panel-body">
+                    <h1>@ViewBag.storeNumber</h1>
+                </div>
+                <div class="panel-footer" style="padding: 0 0 5px 0;">
+                    <span>
+                        <a href="javascript:void(0)">
+                            <h3>
+                                <i class="fa fa-home"></i>&nbsp;&nbsp;加盟数量
+                            </h3>
+                        </a>
+                    </span>
+                </div>
             </div>
-            <p>已有 @ViewBag.storeNumber 家分店啦</p>
         </div>
         <div class="col-md-5 col-sm-5 box0">
-            <div class="box1">
-                <span><a href="javascript:void(0)"><i class="fa fa-tv"></i></a></span>
-                <h3>@ViewBag.sale</h3>
+            <div class="panel  panel-default" style="text-align: center;">
+                <div class="panel-body">
+                    <h1>@ViewBag.sale</h1>
+                </div>
+                <div class="panel-footer" style="padding: 0 0 5px 0;">
+                    <span>
+                        <a href="javascript:void(0)">
+                            <h3>
+                                <i class="fa fa-tv"></i>&nbsp;&nbsp;营业金额
+                            </h3>
+                        </a>
+                    </span>
+                </div>
             </div>
-            <p>本月本店的营业额已达到 @ViewBag.sale 元</p>
         </div>
     }
 </div>
