--- a/HWYZ/Views/Home/Index.cshtml
+++ b/HWYZ/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 col-sm-3 box0">
+        <div class="col-md-3 col-sm-3">
             <div class="panel  panel-default" style="text-align: center;">
                 <div class="panel-body">
                     <h1>@ViewBag.income</h1>
@@ -58,7 +58,7 @@
     }
     else
     {
-        <div class="col-md-5 col-sm-5 col-md-offset-1 box0">
+        <div class="col-md-5 col-sm-5 col-md-offset-1">
             <div class="panel  panel-default" style="text-align: center;">
                 <div class="panel-body">
                     <h1>@ViewBag.storeNumber</h1>
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5 col-sm-5 box0">
+        <div class="col-md-5 col-sm-5">
             <div class="panel  panel-default" style="text-align: center;">
                 <div class="panel-body">
                     <h1>@ViewBag.sale</h1>
