--- a/HWYZ/Views/Password/Index.cshtml
+++ b/HWYZ/Views/Password/Index.cshtml
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <div class="col-sm-5"></div>
                     <div class="col-sm-7">
-                        <button type="submit" class="btn btn-info btn-lg">确定修改</button>
+                        <button type="submit" class="btn btn-info">确定修改</button>
                     </div>
                 </div>
             </form>
