修改订单详细页面表格样式

--- a/HWYZ/Views/ReportOfSale/List.cshtml
+++ b/HWYZ/Views/ReportOfSale/List.cshtml
@@ -5,7 +5,7 @@
         <thead>
             <tr>
                 <td>经营单位</td>
-                <td>金额（单位：元）</td>
+                <td>营业额（单位：元）</td>
             </tr>
         </thead>
         <tbody>
