--- a/HWYZ/Views/Password/Index.cshtml
+++ b/HWYZ/Views/Password/Index.cshtml
@@ -2,37 +2,28 @@
     <div class="panel-body row">
         <div class="col-md-2">
         </div>
-        <div class="col-md-10">
+        <div class="col-md-4">
             <form class="form-horizontal" id="form_change" action="password/changePassword" method="post">
                 <div class="form-group">
-                    <h4>
-                        <label class="col-sm-2 control-label" for="ds_host">输入原密码:</label>
-                    </h4>
-                    <div class="col-sm-4">
-                        <input class="form-control" name="oldPass" type="password" />
+                    <div class="input-group">
+                        <span class="input-group-addon">输入原密码</span>
+                        <input type="text" name="oldPass" class="form-control" type="password" />
                     </div>
                 </div>
                 <div class="form-group">
-                    <h4>
-                        <label class="col-sm-2 control-label" for="ds_host">输入新密码:</label>
-                    </h4>
-                    <div class="col-sm-4">
-                        <input class="form-control" name="newPass" type="password" id="newPass" />
+                    <div class="input-group">
+                        <span class="input-group-addon">输入新密码</span>
+                        <input type="text" name="newPass" class="form-control" type="password" id="newPass" />
                     </div>
                 </div>
                 <div class="form-group">
-                    <h4>
-                        <label class="col-sm-2 control-label" for="ds_host">再次输入新密码:</label>
-                    </h4>
-                    <div class="col-sm-4">
-                        <input class="form-control" name="newPassAgain" type="password" />
+                    <div class="input-group">
+                        <span class="input-group-addon">再次输入新密码</span>
+                        <input type="text" name="newPassAgain" class="form-control" type="password" />
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-5"></div>
-                    <div class="col-sm-7">
-                        <button type="submit" class="btn btn-info">确定修改</button>
-                    </div>
+                <div class="form-group" style="text-align: right;">
+                    <button type="submit" class="btn btn-info">确定修改</button>
                 </div>
             </form>
         </div>
