--- a/HWYZ/Views/Shared/_OrderLayout.cshtml
+++ b/HWYZ/Views/Shared/_OrderLayout.cshtml
@@ -1,39 +1,79 @@
 ﻿<!DOCTYPE html>
-<html lang="zh">
+<html lang="en" style="overflow: hidden;">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="Dashboard">
+    <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
+
     <title>徽味驿站云平台</title>
-    <link href="~/Images/logo.jpg" rel="shortcut icon" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width" />
+
+    <!-- Bootstrap core CSS -->
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/mainstyle.css")
     @Scripts.Render("~/bundles/jquery")
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <style type="text/css">
+        .jqstooltip { position: absolute; left: 0px; top: 0px; display: block; visibility: hidden; background: rgb(0, 0, 0) transparent; background-color: rgba(0,0,0,0.6); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000); -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; color: white; font: 10px arial, san serif; text-align: left; white-space: nowrap; border: 1px solid white; z-index: 10000; }
+        .jqsfield { color: white; padding: 5px 5px 8px 5px; font: 10px arial, san serif; text-align: left; }
+    </style>
 </head>
-<body>
-    <div class="noprint navbar navbar-duomi navbar-static-top" role="navigation" style="min-height: 100px;">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" style="height: 90px; padding-left: 100px;" href="#" id="logo">
-                    徽味驿站云平台<br />
-                    <br />
-                    HUIWEI YIZHAN CLOUD PLATFORM
-                </a>
+<body ryt12721="1" style="zoom: 1;">
+    <section id="icontainer">
+        <!-- **********************************************************************************************************************************************************
+      TOP BAR CONTENT & NOTIFICATIONS
+      *********************************************************************************************************************************************************** -->
+        <!--header start-->
+        <header class="header black-bg noprint" style="background: #4E7DB5; border-bottom: 1px solid #153A6F;">
+            <!--logo start-->
+            <a href="/" class="logo"><b>徽味驿站云平台</b></a>
+            <!--logo end-->
+            <div class="top-menu">
+                <ul class="nav pull-right top-menu">
+                    <li><a class="logout" href="PassWord">修改密码</a></li>
+                    <li><a class="logout" href="login/logoff">退出</a></li>
+                </ul>
             </div>
-        </div>
-    </div>
-    <div id="main-content" class="container-fluid">
-        <section class="content-wrapper main-content clear-fix">
+            @using HWYZ.Context;
+            @using HWYZ.Models;
+            @if (UserContext.stores != null && UserContext.stores.Count > 0)
+            {
+                <div class="top-menu dropdown">
+                    <ul class="nav pull-right top-menu">
+                        <li>
+                            <button class="logout btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                切换分店
+    <span class="caret"></span>
+                            </button>
+
+                            <ul id="logChange" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                @foreach (Store item in UserContext.stores)
+                                {
+                                    <li><a href="#" data-id="@item.ID">@item.StoreName</a></li>
+                                }
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            }
+        </header>
+        <!--header end-->
+    </section>
+
+    <section>
+        <section class="wrapper">
             @RenderBody()
         </section>
-    </div>
-    <footer>
-        <div class="FootBox noprint">
-            <div class="FootContent">
-                <p>&copy; @DateTime.Now.Year - 徽味驿站版权所有</p>
-            </div>
-        </div>
-    </footer>
+    </section>
 
     @Scripts.Render("~/bundles/common")
+    @Scripts.Render("~/Scripts/jquery.scrollTo.min.js")
 </body>
 </html>
