--- a/HWYZ/Views/StoreGrant/Index.cshtml
+++ b/HWYZ/Views/StoreGrant/Index.cshtml
@@ -38,6 +38,10 @@
                             map.centerAndZoom(point, 13);
 
                             map.addEventListener("click", function (e) {
+                                var check = checkDistance(e.point);
+
+                                if (check && !confirm(check)) { return false; }
+
                                 if (!confirm("确定在此开设分店？")) { return false; }
 
                                 $("input[name=Lng]").val(e.point.lng);
@@ -45,7 +49,29 @@
 
                                 $("#dlg_map").modal("hide");
                             });
+                            
+                            function checkDistance(point) {
+                                var list = map.stores;
+
+                                if (list.length == 0) { return null; }
+
+                                var distance, storeName, nearest;
+
+                                for (var i = 0, length = list.length; i < length; i++) {
+                                    distance = Number((map.getDistance(point, list[i][0])).toFixed(2));
+
+                                    if (!nearest || (distance < nearest && distance > 0)) {
+                                        nearest = distance;
+                                        storeName = list[i][1];
+                                    }
+                                }
+
+                                return "最近的分店是{0}，距离为：{1}米".format(storeName, nearest);
+                            }
                         </script>
+                    </div>
+                    <div style="text-align: center;">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">关闭</button>
                     </div>
                 </div>
             </div>
