--- a/HWYZ/Views/DeliveEdit/Index.cshtml
+++ b/HWYZ/Views/DeliveEdit/Index.cshtml
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="panel-footer" style="text-align: right;">
-        <button type="button" class="btn btn-default send">发货</button>
+        <button type="button" class="btn btn-info send">发货</button>
     </div>
 </div>
 <div class="modal fade" id="dlg_edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
