--- a/HWYZ/Views/Home/Index.cshtml
+++ b/HWYZ/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">待处理订单</h3>
+        <h3 class="panel-title"><i class="fa fa-angle-double-right"></i>&nbsp;&nbsp;待处理订单</h3>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
@@ -176,7 +176,7 @@
 {
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">库存预警</h3>
+            <h3 class="panel-title"><i class="fa fa-angle-double-right"></i>&nbsp;&nbsp;库存预警</h3>
         </div>
         <div class="panel-body">
             <div class="table-responsive">
@@ -206,7 +206,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">信息公告</h3>
+        <h3 class="panel-title"><i class="fa fa-angle-double-right"></i>&nbsp;&nbsp;信息公告</h3>
     </div>
     <div class="panel-body">
         @using (Ajax.BeginForm("Index", new RouteValueDictionary { { "id", "" } }, new AjaxOptions { UpdateTargetId = "unseen", InsertionMode = InsertionMode.Replace }, new { @id = "form_query" }))
