--- a/HWYZ/Views/Shared/_Layout.cshtml
+++ b/HWYZ/Views/Shared/_Layout.cshtml
@@ -129,14 +129,14 @@
       *********************************************************************************************************************************************************** -->
         <!--main content start-->
         <section id="main-content">
-            <section class="wrapper">
+            <section class="wrapper table-blue">
                 @RenderBody()
             </section>
         </section>
 
         <!--main content end-->
         <!--footer start-->
-       @* <footer class="site-footer">
+        @* <footer class="site-footer">
             <div class="text-center">
                 @DateTime.Now.Year - 徽味驿站版权所有
              
