--- a/HWYZ/Views/Shared/_OrderLayout.cshtml
+++ b/HWYZ/Views/Shared/_OrderLayout.cshtml
@@ -37,8 +37,8 @@
             <!--logo end-->
             <div class="top-menu">
                 <ul class="nav pull-right top-menu">
-                    <li><a class="logout" href="PassWord">修改密码</a></li>
-                    <li><a class="logout" href="login/logoff">退出</a></li>
+                    <li><a class="logout" href="~/PassWord">修改密码</a></li>
+                    <li><a class="logout" href="~/login/logoff">退出</a></li>
                 </ul>
             </div>
             @using HWYZ.Context;
@@ -68,7 +68,7 @@
     </section>
 
     <section>
-        <section class="wrapper">
+        <section class="wrapper table-blue">
             @RenderBody()
         </section>
     </section>
